[package]
name = "rbeditor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.22.0", features = ["default_fonts", "glow"] }
egui = "0.22.0"
rfd = "0.11.0"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
tree-sitter-highlight = "0.20.1"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "windef"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }